# esp-bsp-86box

./: .gitattributes  CMakeLists.txt  Kconfig  README.md  idf_component.yaml  pinmap.md  pinmap.txt  to_validate.h
include/bsp/: display.h  esp-bsp.h  touch.h
src/: bsp_86box.c  bsp_audio.c  bsp_display.c  bsp_storage.c  bsp_touch.c  esp-bsp.c
